backup/envoy_config_full.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              
              routes:

              - match:
                  prefix: "/v1/statement"
                route:
                  cluster_header: "X-Cluster-Id"
                  
                typed_per_filter_config:
                  # https://www.envoyproxy.io/docs/envoy/v1.31.0/api-v3/extensions/filters/http/lua/v3/lua.proto#extensions-filters-http-lua-v3-luaperroute
                  envoy_on_request:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                    source_code:
                      filename: /etc/envoy/request.lua

          access_log:
          - name: envoy.access_loggers.file
            typed_config: 
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /var/log/envoy-logs.log
              
          http_filters:
          # we add global filter with default source code as only trino calls should execute the filter
          - name: envoy_on_request
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            disabled: true
          
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router


  clusters:
  - name: trino_1
    type: STRICT_DNS
    load_assignment:
      cluster_name: trino_1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: trino_1
                port_value: 8080


  - name: trino_2
    type: STRICT_DNS
    load_assignment:
      cluster_name: trino_2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: trino_2
                port_value: 8090

  - name: cache
    type: STRICT_DNS
    load_assignment:
      cluster_name: cache
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: cache
                port_value: 9000

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

layered_runtime:
  layers:
  - name: static_layer_0
    static_layer:
      envoy:
        resource_limits:
          listener:
            example_listener_name:
              connection_limit: 10000
